Bug 246770 "Hyperlinks is not UI Grabble in GOK" r  = pkwarren sr = henry.jia